Vivado Project/PraticewithI2C_Inter.sdk/.metadata/.plugins/org.eclipse.cdt.ui/GyroI2C.build.log
14:55:13 **** Incremental Build of configuration Debug for project GyroI2C ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/freertos_hello_world.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include" -c -fmessage-length=0 -MT"src/freertos_hello_world.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../GyroI2C_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/freertos_hello_world.d" -MT"src/freertos_hello_world.o" -o "src/freertos_hello_world.o" "../src/freertos_hello_world.c"
In file included from C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/leg.h:8:0,
                 from ../src/freertos_hello_world.c:104:
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/leg_type.h:13:1: error: unknown type name 'class'
 class FootTip {
 ^~~~~
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/leg_type.h:13:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 class FootTip {
               ^
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/leg_type.h:107:1: error: unknown type name 'class'
 class Link3d {
 ^~~~~
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/leg_type.h:107:14: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 class Link3d {
              ^
In file included from ../src/freertos_hello_world.c:104:0:
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/leg.h:14:1: error: unknown type name 'class'
 class Leg {
 ^~~~~
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/leg.h:14:11: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 class Leg {
           ^
In file included from C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/imu.h:9:0,
                 from ../src/freertos_hello_world.c:107:
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/helper_3dmath.h:37:1: error: unknown type name 'class'
 class Quaternion {
 ^~~~~
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/helper_3dmath.h:37:18: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 class Quaternion {
                  ^
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/helper_3dmath.h:94:1: error: unknown type name 'class'
 class VectorInt16 {
 ^~~~~
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/helper_3dmath.h:94:19: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 class VectorInt16 {
                   ^
In file included from C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/imu.h:9:0,
                 from ../src/freertos_hello_world.c:107:
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/helper_3dmath.h:161:1: error: unknown type name 'class'
 class VectorFloat {
 ^~~~~
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/helper_3dmath.h:161:19: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 class VectorFloat {
                   ^
In file included from ../src/freertos_hello_world.c:107:0:
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/imu.h:14:1: error: unknown type name 'class'
 class IMU {
 ^~~~~
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/imu.h:14:11: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 class IMU {
           ^
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/imu.h:34:8: error: unknown type name 'IMU'
 static IMU Imu;
        ^~~
In file included from C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/hexapod.h:13:0,
                 from ../src/freertos_hello_world.c:108:
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/hexapod_type.h:30:1: error: unknown type name 'class'
 class Rot3d {
 ^~~~~
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/hexapod_type.h:30:13: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 class Rot3d {
             ^
In file included from ../src/freertos_hello_world.c:108:0:
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/hexapod.h:18:1: error: unknown type name 'class'
 class HEXAPOD {
 ^~~~~
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\GyroI2C\include/hexapod.h:18:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 class HEXAPOD {
               ^
../src/freertos_hello_world.c: In function 'main':
../src/freertos_hello_world.c:122:10: error: request for member 'setup' in something not a structure or union
       Imu.setup(intrPin);
          ^
../src/freertos_hello_world.c:125:19: error: request for member 'available' in something not a structure or union
        while (!Imu.available()) {
                   ^
../src/freertos_hello_world.c:128:20: error: request for member 'readFifoBuffer' in something not a structure or union
        status = Imu.readFifoBuffer();
                    ^
../src/freertos_hello_world.c:131:22: error: request for member 'quat' in something not a structure or union
         prinfloat(Imu.quat.w);
                      ^
../src/freertos_hello_world.c:133:22: error: request for member 'quat' in something not a structure or union
         prinfloat(Imu.quat.x);
                      ^
../src/freertos_hello_world.c:135:22: error: request for member 'quat' in something not a structure or union
         prinfloat(Imu.quat.y);
                      ^
../src/freertos_hello_world.c:137:22: error: request for member 'quat' in something not a structure or union
         prinfloat(Imu.quat.z);
                      ^
../src/freertos_hello_world.c:141:22: error: request for member 'euler' in something not a structure or union
         prinfloat(Imu.euler[0] * 180 / M_PI);
                      ^
../src/freertos_hello_world.c:143:22: error: request for member 'euler' in something not a structure or union
         prinfloat(Imu.euler[1] * 180 / M_PI);
                      ^
../src/freertos_hello_world.c:145:22: error: request for member 'euler' in something not a structure or union
         prinfloat(Imu.euler[2] * 180 / M_PI);
                      ^
../src/freertos_hello_world.c:149:22: error: request for member 'ypr' in something not a structure or union
         prinfloat(Imu.ypr[0] * 180 / M_PI);
                      ^
../src/freertos_hello_world.c:151:22: error: request for member 'ypr' in something not a structure or union
         prinfloat(Imu.ypr[1] * 180 / M_PI);
                      ^
../src/freertos_hello_world.c:153:22: error: request for member 'ypr' in something not a structure or union
         prinfloat(Imu.ypr[2] * 180 / M_PI);
                      ^
make: *** [src/freertos_hello_world.o] Error 1

14:55:14 Build Finished (took 398ms)

